--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,2 @@
-MONGO_URI=mongodb+srv://weatherapp:weatherapp@cluster0.z08pecz.mongodb.net/?retryWrites=true&w=majority
+MONGO_URI=mongodb+srv://weatherapp:<password>@cluster0.z08pecz.mongodb.net/?retryWrites=true&w=majority
 PORT=4000
